crates/specforge-mcp/tests/snapshots/tests__prompt_golden__15_trace_plan.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "description": "Identify traceability gaps for a plan",
  "instruction": "Trace the dependency chain for the plan. The data below shows all affected entities, unverified entities in the chain, and coverage gaps. Prioritize addressing unverified entities that are on critical paths.",
  "layout": "turns",
  "payload": {
    "affected_entities": [
      "beta",
      "feat_login",
      "inv_session"
    ],
    "coverage_gaps": [
      {
        "gap_context": "E003: unresolved entity 'ghost' in plan — not found in graph",
        "missing_link_type": "unresolved_entity",
        "source_entity": "plan",
        "target_entity": "ghost"
      },
      {
        "gap_context": "testable entity 'alpha' (behavior) is not covered by the plan",
        "missing_link_type": "missing_plan_entry",
        "source_entity": "plan",
        "target_entity": "alpha"
      },
      {
        "gap_context": "testable entity 'inv_session' (invariant) is not covered by the plan",
        "missing_link_type": "missing_plan_entry",
        "source_entity": "plan",
        "target_entity": "inv_session"
      }
    ],
    "unverified_entities": [
      "beta",
      "inv_session"
    ]
  },
  "roles": [
    "user",
    "user"
  ]
}
