crates/specforge-mcp/tests/snapshots/tests__prompt_golden__17_trace_no_arguments.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "message": "Missing required argument: plan or entity_id"
  }
}
