crates/specforge-mcp/tests/snapshots/tests__prompt_golden__21_explore_kind_behavior.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "instruction": "Explore the spec graph using the data below. Start with high-connectivity nodes to understand the core structure, then investigate orphan nodes that may need relationships. Use starting_points for top-down traversal.",
  "layout": "turns",
  "payload": {
    "high_connectivity": [
      "beta",
      "feat_login",
      "inv_session",
      "alpha",
      "delta"
    ],
    "matching_entities": [
      "alpha",
      "beta",
      "delta"
    ],
    "orphan_nodes": [],
    "relationship_paths": [],
    "starting_points": [
      "beta",
      "alpha",
      "delta",
      "feat_login",
      "inv_session"
    ]
  },
  "roles": [
    "user",
    "assistant"
  ]
}
