crates/specforge-mcp/tests/snapshots/tests__prompt_golden__22_explore_alpha_kind_invariant.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "description": "Discover exploration starting points in the graph",
  "instruction": "Explore the spec graph using the data below. Start with high-connectivity nodes to understand the core structure, then investigate orphan nodes that may need relationships. Use starting_points for top-down traversal.",
  "layout": "turns",
  "payload": {
    "high_connectivity": [
      "beta",
      "feat_login",
      "inv_session",
      "alpha",
      "delta"
    ],
    "matching_entities": [],
    "orphan_nodes": [],
    "relationship_paths": [
      {
        "edge_types": [
          "features",
          "features",
          "invariants"
        ],
        "from_entity": "alpha",
        "path_length": 3,
        "to_entity": "inv_session"
      }
    ],
    "starting_points": [
      "beta",
      "alpha",
      "delta",
      "feat_login",
      "inv_session"
    ]
  },
  "roles": [
    "user",
    "user"
  ]
}
