crates/specforge-mcp/tests/snapshots/tests__prompt_golden__24_infer_overview.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "description": "Get inference guidance for discovering spec entities from code",
  "instruction": "You are inferring spec entities from this codebase. Use the inference guides below to identify entities in the code, write .spec files, and validate them with specforge.validate. Each kind has signals describing what to look for in code. Do not duplicate entities that already exist.",
  "layout": "turns",
  "payload": {
    "existing_entities": {
      "behavior": 3,
      "feature": 1,
      "invariant": 1
    },
    "installed_extensions": [
      "@specforge/product",
      "@specforge/software",
      "@specforge/testing"
    ],
    "kinds": [
      {
        "description": "A user-facing capability that solves a specific problem",
        "extension": "@specforge/product",
        "fields": [
          "acceptance",
          "contributors",
          "depends_on",
          "description",
          "effort",
          "features",
          "owner",
          "priority",
          "problem*",
          "reason",
          "refs",
          "solution",
          "status",
          "tags",
          "tests"
        ],
        "inference_guide": "[guide]",
        "kind": "feature"
      },
      {
        "description": "A user journey through the product experience",
        "extension": "@specforge/product",
        "fields": [
          "channels",
          "description",
          "features",
          "flow*",
          "persona",
          "priority",
          "tags"
        ],
        "inference_guide": "[guide]",
        "kind": "journey"
      },
      {
        "description": "A shippable unit of work with dependencies and milestones",
        "extension": "@specforge/product",
        "fields": [
          "artifact_type*",
          "contributors",
          "depends_on",
          "description",
          "journeys",
          "milestones",
          "modules",
          "owner",
          "reason",
          "status",
          "tags",
          "version"
        ],
        "inference_guide": "[guide]",
        "kind": "deliverable"
      },
      {
        "description": "A significant project checkpoint with tracked progress",
        "extension": "@specforge/product",
        "fields": [
          "behaviors",
          "blockers",
          "contributors",
          "depends_on",
          "description",
          "exit_criteria",
          "features",
          "modules",
          "owner",
          "priority",
          "reason",
          "refs",
          "start_date",
          "status",
          "tags",
          "target_date"
        ],
        "inference_guide": "[guide]",
        "kind": "milestone"
      },
      {
        "description": "A logical grouping of related features and behaviors",
        "extension": "@specforge/product",
        "fields": [
          "depends_on",
          "description",
          "family",
          "features",
          "ports",
          "ports_defined",
          "reason",
          "tags"
        ],
        "inference_guide": "[guide]",
        "kind": "module"
      },
      {
        "description": "A glossary entry defining domain-specific vocabulary",
        "extension": "@specforge/product",
        "fields": [
          "aliases",
          "context",
          "definition*",
          "module",
          "see_also",
          "tags"
        ],
        "inference_guide": "[guide]",
        "kind": "term"
      },
      {
        "description": "A user archetype representing a target audience segment",
        "extension": "@specforge/product",
        "fields": [
          "description*",
          "goals",
          "key_features",
          "pain_points",
          "reason",
          "status",
          "tags",
          "technical_level"
        ],
        "inference_guide": "[guide]",
        "kind": "persona"
      },
      {
        "description": "A communication or distribution channel for the product",
        "extension": "@specforge/product",
        "fields": [
          "description*",
          "interaction_model",
          "reason",
          "status",
          "tags",
          "url"
        ],
        "inference_guide": "[guide]",
        "kind": "channel"
      },
      {
        "description": "A versioned product release bundling deliverables",
        "extension": "@specforge/product",
        "fields": [
          "changelog",
          "contributors",
          "deliverables",
          "depends_on",
          "description",
          "milestones",
          "owner",
          "reason",
          "refs",
          "release_date",
          "status",
          "tags",
          "target_date",
          "version*"
        ],
        "inference_guide": "[guide]",
        "kind": "release"
      },
      {
        "description": "A testable unit of system functionality with a defined contract",
        "extension": "@specforge/software",
        "fields": [
          "category",
          "consumes",
          "contract*",
          "description",
          "diagnostic",
          "features",
          "invariants",
          "ports",
          "produces",
          "refs",
          "severity",
          "status",
          "types"
        ],
        "inference_guide": "[guide]",
        "kind": "behavior"
      },
      {
        "description": "A system-wide constraint that must always hold true",
        "extension": "@specforge/software",
        "fields": [
          "description",
          "guarantee*",
          "refs",
          "risk"
        ],
        "inference_guide": "[guide]",
        "kind": "invariant"
      },
      {
        "description": "A significant occurrence in the system that triggers reactions",
        "extension": "@specforge/software",
        "fields": [
          "category",
          "channel",
          "channel_type",
          "contract",
          "description",
          "payload",
          "refs"
        ],
        "inference_guide": "[guide]",
        "kind": "event"
      },
      {
        "description": "A data structure or domain model definition",
        "extension": "@specforge/software",
        "fields": [
          "composed_types",
          "description",
          "extends",
          "fields",
          "kind",
          "refs"
        ],
        "inference_guide": "[guide]",
        "kind": "type"
      },
      {
        "description": "An interface boundary between system components",
        "extension": "@specforge/software",
        "fields": [
          "category",
          "description",
          "direction*",
          "methods",
          "refs",
          "types"
        ],
        "inference_guide": "[guide]",
        "kind": "port"
      }
    ],
    "output_format": "Write .spec files in the spec/ directory. Use `keyword entity_id \"Title\" { fields }` syntax. Entity IDs are snake_case identifiers (letters, digits, underscores, 2-60 chars).",
    "project_conventions": "",
    "spec_directory": "spec/",
    "validation": "After writing .spec files, call specforge.validate to check for errors (and specforge.analyze for coverage/contract findings). Fix any errors before proceeding."
  },
  "roles": [
    "user",
    "user"
  ]
}
